venues and swagger updates
